--- a/drupal/sites/all/themes/jnet5/css/header.css
+++ b/drupal/sites/all/themes/jnet5/css/header.css
@@ -18,7 +18,7 @@ body.toolbar {
 #block-menu-block-1 {
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 19;
   width: 1170px;
   height: 65px;
   overflow-y: hidden;
@@ -120,7 +120,7 @@ body.toolbar #block-menu-block-1 {
   background: #fff;
   position: fixed;
   top: -65px;
-  z-index: 2;
+  z-index: 20;
   left: 50%;
   margin-left: -585px;
   text-align: center;
